--- a/PaymentIntegration/PaymentIntegration.csproj
+++ b/PaymentIntegration/PaymentIntegration.csproj
@@ -5,8 +5,10 @@
     <Authors>burak_ozen</Authors>
     <Description>VPOS Payment Integration</Description>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <Version>1.0.5</Version>
+    <Version>1.0.7</Version>
     <PackageReleaseNotes>Property name changes</PackageReleaseNotes>
+    <AssemblyVersion>1.0.7.0</AssemblyVersion>
+    <FileVersion>1.0.7.0</FileVersion>
   </PropertyGroup>
 
   <ItemGroup>
